--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 	<img src="images/logo-ausonius.jpg" alt="Mon image de test" width="50%"/>
 	<h1>Le groupe aristocratique de la vicomté de Castillon (XIIIe-XVe)</h1>
-<p>Ce mémoire est rédigé par Aguiriano Félicité et dirigé par <a href="https://cv.hal.science/frederic-boutoulle">Frédéric Boutoulle</a>.</p>
+<p>Ce mémoire est rédigé par <strong>Aguiriano Félicité</strong> et dirigé par <a href="https://cv.hal.science/frederic-boutoulle">Frédéric Boutoulle</a>.</p>
 <p>Ce mémoire entre dans le champ de plusieurs domaines scientifiques :
 </p>
 
@@ -22,9 +22,10 @@
   <li>Histoire du sol et du bâti</li>
 </ul>
 
-<p>Ce mémoire a pour objectif d'analyser la présence d'un groupe aristocratique dans la vicomté de Castillon, de qui se compose ce groupe, de ses liens entre eux et avec leur vicomte, de leurs habitats et son évolution. Tout cela durant une période charnière de la vicomté : en effet, à la fin du XIIIe siècle, le vicomte de Castillon est exilé et une nouvelle famille parvient au pouvoir. Cette nouvelle famille, celle des Grailly, est très puissante et ne cesse, grâce aux mariages de ses membres, de s'accaparer de nouveaux territoires en Guyenne. La vicomté de Castillon n'est plus qu'un territoire comme un autre. Comment le groupe aristocratique évolue-t-il face à un tel changement ? </p>
-<p>La vicomté de Castillon a été peu étudiée par l'historiographie. Elle a été l'objet surtout de quelques érudits au XIXe et au début du XXe, qui manquent parfois de méthodes scientifiques. </p>
+<p>Ce mémoire a pour objectif d'analyser la présence d'un groupe aristocratique dans la vicomté de Castillon, de <strong>qui</strong> se compose ce groupe, de ses liens entre eux et avec leur vicomte, de leurs <strong>habitats</strong> et son évolution. Tout cela durant une <strong>période charnière</strong> de la vicomté : en effet, à la fin du XIIIe siècle, le vicomte de Castillon est exilé et une nouvelle famille parvient au pouvoir. Cette nouvelle famille, celle des <strong>Grailly</strong>, est très puissante et ne cesse, grâce aux mariages de ses membres, de s'accaparer de nouveaux territoires en Guyenne. La vicomté de Castillon n'est plus qu'un territoire comme un autre. Comment le groupe aristocratique évolue-t-il face à un tel changement ? </p>
+<p>La vicomté de Castillon a été peu étudiée par <strong>l'historiographie</strong>. Elle a été l'objet surtout de quelques érudits au XIXe et au début du XXe, qui manquent parfois de méthodes scientifiques. </p>
 <img src="images/bataille-de-castillon.jpg" alt="Image de Castillon" width="400px"/>
+<h2>Miniature ornant le manuscrit de Martiel d'Auvergne, <em>Les Vigiles de la mort de Charles VII</em>, vers 1484, BNF, ms. Français 5054 f° 229 v°.</h2>
   </body>
 
 </html>
